<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>com.javayh</groupId>
    <artifactId>javayh-platform</artifactId>
    <version>1.0.0</version>
    <name>javayh-platform</name>
    <description>微服务学习</description>

    <properties>
        <java.version>14</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <fastjson.version>1.2.60</fastjson.version>
        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.compiler.compilerArgs>--enable-preview</maven.compiler.compilerArgs>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
        <maven-dockerfile-plugin.version>1.4.10</maven-dockerfile-plugin.version>
        <maven-spring-boot-plugin.version>2.2.6.RELEASE</maven-spring-boot-plugin.version>
        <core.version>1.0.0</core.version>
        <fastjson.version>1.2.60</fastjson.version>
        <mybatis.version>1.3.2</mybatis.version>
        <druid.version>1.1.10</druid.version>
        <commons-codec.version>1.10</commons-codec.version>
        <jsoup.version>1.11.2</jsoup.version>
        <htmlunit.version>2.24</htmlunit.version>
        <selenium-java.version>2.53.1</selenium-java.version>
        <phantomjs.version>1.3.0</phantomjs.version>
        <slf4j-api.version>1.7.25</slf4j-api.version>
        <junit.version>4.11</junit.version>
        <netty.version>4.1.21.Final</netty.version>
        <easypoi.version>3.2.0</easypoi.version>
        <google.zxing.version>3.3.0</google.zxing.version>
        <pagehelpe.version>1.2.10</pagehelpe.version>
        <mysql.connector.version>6.0.6</mysql.connector.version>
        <spring-javaformat.version>0.0.7</spring-javaformat.version>
        <hutool.version>4.1.19</hutool.version>
        <zipkin.version>2.12.1</zipkin.version>
        <!--<spring-cloud-dependencies.version>Greenwich.SR3</spring-cloud-dependencies.version>-->
        <!--springboot 2.2.0 -->
        <spring-cloud-dependencies.version>Hoxton.SR3</spring-cloud-dependencies.version>
        <spring-cloud-alibaba-dependencies.version>2.1.1.RELEASE</spring-cloud-alibaba-dependencies.version>
    </properties>

    <modules>
        <module>javayh-dependencies</module>
        <module>javayh-route</module>
        <module>javayh-demo</module>
        <module>javayh-plugins</module>
        <module>javayh-sso</module>
        <module>javayh-monitor-center</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <!-- time -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <!--工具类-->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure-processor</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--spring cloud-->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--alibaba cloud-->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 公共实体类模块 -->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-common-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!-- 关系型和非关系型数据库配置 -->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-data-sources-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!--数据库诗酒花-->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-mybatis-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!-- 非关系型数据库配置 -->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-redis-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!-- 日志配置 -->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-log-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!--nocos-->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-nacos-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!--swagger-->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-swagger-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <!--mail-->
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-mail-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-heartbeat-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.javayh</groupId>
                <artifactId>javayh-oauth-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <!-- 先指定 src/main/resources下所有文件及文件夹为资源文件 -->
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/**</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <!-- 插件管理，可供子项目继承 -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${maven-spring-boot-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!--maven deploy 忽略发布插件-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.spring.javaformat</groupId>
                <artifactId>spring-javaformat-maven-plugin</artifactId>
                <version>${spring-javaformat.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${maven.compiler.encoding}</encoding>
                    <compilerArgs>${maven.compiler.compilerArgs}</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
            </plugin>
            <plugin>
                <!--打包跳过测试-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>maven-ali</id>
            <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>
    <developers>
        <developer>
            <id>001</id>
            <name>Yang Haiji</name>
            <email>yanghaij327@qq.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>javayh-platfom</name>
            <url>ttp://www.apache.org/licenses/</url>
        </license>
    </licenses>
    <!-- 环境 -->
    <profiles>
        <!-- 开发 -->
        <profile>
            <id>dev</id>
            <activation>
                <!--默认激活配置-->
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!--当前环境-->
                <profile.name>dev</profile.name>
                <!--Nacos配置中心地址-->
                <config.server-addr>192.168.0.109:8848</config.server-addr>
                <config.server-group>DEFAULT_GROUP</config.server-group>
                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
                <config.namespace>d7503bcd-e44c-475a-88d4-d28cbfb444fc</config.namespace>
                <!--Nacos服务发现地址-->
                <discovery.server-addr>192.168.0.109:8848</discovery.server-addr>
                <!--Nacos服务注册ip地址-->
               <!-- <discovery.server-ip>100.100.100.100</discovery.server-ip>-->
            </properties>
        </profile>
        <!-- 测试 -->
        <profile>
            <id>test</id>
            <properties>
                <!--当前环境-->
                <profile.name>test</profile.name>
                <!--Nacos配置中心地址-->
                <config.server-addr>127.0.0.1:8848</config.server-addr>
                <config.server-group>DEFAULT_GROUP</config.server-group>
                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
                <config.namespace>d7503bcd-e44c-475a-88d4-d28cbfb444fc</config.namespace>
                <!--Nacos服务发现地址-->
                <discovery.server-addr>127.0.0.1:8848</discovery.server-addr>
                <!--Nacos服务注册ip地址-->
               <!-- <discovery.server-ip>100.100.100.100</discovery.server-ip>-->
            </properties>
        </profile>
        <!-- 生产 -->
        <profile>
            <id>online</id>
            <properties>
                <!--当前环境,生产环境为空-->
                <profile.name>online</profile.name>
                <!--Nacos配置中心地址-->
                <config.server-addr>127.0.0.1:8848</config.server-addr>
                <config.server-group>DEFAULT_GROUP</config.server-group>
                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
                <config.namespace>d7503bcd-e44c-475a-88d4-d28cbfb444fc</config.namespace>
                <!--Nacos服务发现地址-->
                <discovery.server-addr>127.0.0.1:8848</discovery.server-addr>
                <!--Nacos服务注册ip地址-->
                <!--<discovery.server-ip>100.100.100.100</discovery.server-ip>-->
            </properties>
        </profile>
    </profiles>

</project>
